master

2.25.5
- Mayhem
  Hide the normal post form by default, optional.

2.25.4
- Mayhem
  Fix text inputs not sent/saved correctly in the QR when pasted for example.
  Revert hidding normal post form.

2.25.3
- Mayhem
  Fix image spoiler always enabled, bug introduced in 2.25.2.

2.25.2
- Mayhem
  Reverted updater's scrolling behavior.
  Fix image posting on Firefox along with Unicode characters in the form.
  Ghettofix Greasemonkey compatibility with the new QR.
  Greasemonkey is still NOT RECOMMENDED, use Scriptish instead.

2.25.1
- Mayhem
  Fix missing image filename uploads. Thanks desuwa.

2.25.0
- Mayhem
  Fix 4chan X on /f/.
  Support for the normal post form has been phased out in favor of the new QR.
  New rewritten and redesigned Quick Reply. Highlights include:
    - Easy dumping for image, text, or samefagging.
    - Toggle auto-posting by trying to submit during the cooldown.
    - Multiple file selection.
    - Image thumbnails.
    - Drag and drop files on the page will add these files to the QR.
    - Cache captchas with Shift + Enter.
    - Create new threads with the QR, will auto-noko.
    - Also includes all the previous features:
      - Cooldown and auto-posting.
      - Posting error detection and prevention.
      - Captcha reloading on backspace.
      - Auto Watch on reply/thread creation.
      - Text selection to quote.
      - Etc...
  CAUTION:
    Images posted with the new QR on Firefox/Aurora/Nightly will have their filename missing.
      see https://github.com/MayhemYDG/4chan-x/issues/137
    Greasemonkey is buggy, use Scriptish instead.

2.24.5
- Mayhem
  Index Navigation and the See next/previous thread keybinds will not cycle through board pages anymore.
  Fix archive redirection in Opera.
  Opera support will now be temporarily on hold.
    see https://github.com/MayhemYDG/4chan-x/issues/136

2.24.4
- ahokadesuka
  Scroll back up when unexpanding images.
- e000
  Prevent absurd cooldown durations.
- Mayhem