@@ -1,4 +1,7 @@
 master
+- Mayhem
+  Increase Sauce linking possibilites:
+    Thumbnails, full images.
 
 2.25.5
 - Mayhem
